--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
+    <marquee>This is the Color Picker. Pick a color by pressing on one of the buttons below.</marquee>
   </head>
   <body>
     <script src="sketch.js"></script>
